--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,10 @@
     transform: rotate(360deg);
   }
 }
+
+section  { 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
